language-plutus-core/test/type-errors/unwrapType.plc
(program 0.1.0
  (unwrap (con 64 ! 0))
)
